* [L#1317710] Support TLS versions 1.1, 1.2, and newer

-- 2.11.2 2014-04-14 --
* [L#1206293] Fix crashes after calling +reload
* [L#1206293] Fix commands that output entity info

-- 2.11.1 2014-04-10 --
* Improve Lua scripts

-- 2.11.0 2013-07-19 --
* Reinstate the DisconnectTimeout setting, increase its default from 5 to 10 ms

-- 2.10.1 2013-07-17 --
* Improve nick validation (speak up if you think it's not optimal)

-- 2.10.0 2013-07-13 --
* Make -Wl,--no-undefined conditional as required by the Bloom plugin API
* Add an API to the bloom manager for notifying when the filters get updated
* Add an API to the bloom manager allowing to make requests to the user's filter
* Add an API to the bloom manager allowing to export the filter stats
* Allow usage of the system's Boost Libraries
* Allow usage of the system's Lua Libraries
* Allow specifying the path to the system lua binary
* Improve Lua scripts
* [L#1118699] Normalize per-entity data storage from Lua
* Update Boost to version 1.53
* Stricter nick validation

-- 2.9.0 2012-10-23 --
* Add Lua FileSystem
* Add Lua Socket
* Separate user level detection for limit and flood protection
* Add NI, DE, CID and user command validation to comply with the protocol
* [L#920788] Fix signalSend in lua (thanks Andy Chmilenko)
* [L#920791] Expose a few different functions to scripts (thanks Andy Chmilenko)
* Restrict +listreg and +regnick to operators
* Update Boost to version 1.51
* Stabilize the shutdown process

-- 2.8.1 2012-05-30 --
* [L#830841] Python plugin api signal fix (thanks Andy Chmilenko)
* [L#881790] Make python callback callable (thanks Andy Chmilenko)
* [L#940745] Improve build option granularity (thanks klondike)
* [L#940756] Improve Ruby detection (thanks klondike)
* Update Boost to version 1.49
* [L#880488] Update the temporary workaround for the dchublist pinger

-- 2.8.0 2011-12-11 --
* Send a QUI with TL-1 during fatal STA disconnects
* Process most settings again